# readable-hash-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.codex/skills/readable-hash-models/: SKILL.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: coverage.yml  dependabot-auto-merge.yml  dependabot-release.yml  fuzz.yml  lint.yml  perf-readme.yml  release-drafter.yml  release-publish.yml  rust.yml  semgrep.yml  tests.yml
examples/: english_word.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generate_word.rs
models/: CLAUDE.md  README.md  download-corpus.sh  extract_words.py  generate_rust.py  pyproject.toml  requirements.txt  sample_corpus.txt  test_obfuscation.py  test_tokenizer.py  tokenize.py  tokenizer_check.py  train_bigram.py  train_ngram.py  train_tokenizer.py
models/training-data/: english-lowercase-model.json  english-lowercase.txt
src/: english_word.rs  english_word_data.rs  lib.rs  traits.rs
tests/: cucumber.rs
tests/features/: english_word.feature  english_word_shake256.feature  hash.feature  hash_shake256.feature
