[package]
name = "readable-hash"
version = "0.10.3"
edition = "2024"
description = "Human-readable hash representations for easy verification and data obfuscation"
readme = "README.md"
repository = "https://github.com/renatgalimov/readable-hash-rs"
documentation = "https://docs.rs/readable-hash"
license = "MIT"
keywords = ["hash", "sha256", "readable"]
categories = ["cryptography", "encoding"]

[features]
default = []
shake256 = ["dep:sha3"]

[dependencies]
bitreader = "0.3"
sha3 = { version = "0.10", optional = true }

[dev-dependencies]
cucumber = "0.22"
futures = "0.3"
hex = "0.4"

[[test]]
name = "cucumber"
harness = false
